--- a/final.ipynb
+++ b/final.ipynb
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2023,13 +2023,13 @@
        "[11 rows x 42 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Churn']=='1'].describe(include='all')"
+    "df[df['Churn']=='0'].describe(include='all')"
    ]
   },
   {
@@ -2050,6 +2050,315 @@
    ],
    "source": [
     "df['Churn'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 42 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Unnamed: 0              10000 non-null  int64  \n",
+      " 1   CustomerID              10000 non-null  int64  \n",
+      " 2   Age                     10000 non-null  int64  \n",
+      " 3   Location                10000 non-null  object \n",
+      " 4   Device                  10000 non-null  object \n",
+      " 5   Month_1_Spend           10000 non-null  float64\n",
+      " 6   Month_1_Items           10000 non-null  int64  \n",
+      " 7   Month_1_Support_Calls   10000 non-null  int64  \n",
+      " 8   Month_2_Spend           10000 non-null  float64\n",
+      " 9   Month_2_Items           10000 non-null  int64  \n",
+      " 10  Month_2_Support_Calls   10000 non-null  int64  \n",
+      " 11  Month_3_Spend           10000 non-null  float64\n",
+      " 12  Month_3_Items           10000 non-null  int64  \n",
+      " 13  Month_3_Support_Calls   10000 non-null  int64  \n",
+      " 14  Month_4_Spend           10000 non-null  float64\n",
+      " 15  Month_4_Items           10000 non-null  int64  \n",
+      " 16  Month_4_Support_Calls   10000 non-null  int64  \n",
+      " 17  Month_5_Spend           10000 non-null  float64\n",
+      " 18  Month_5_Items           10000 non-null  int64  \n",
+      " 19  Month_5_Support_Calls   10000 non-null  int64  \n",
+      " 20  Month_6_Spend           10000 non-null  float64\n",
+      " 21  Month_6_Items           10000 non-null  int64  \n",
+      " 22  Month_6_Support_Calls   10000 non-null  int64  \n",
+      " 23  Month_7_Spend           10000 non-null  float64\n",
+      " 24  Month_7_Items           10000 non-null  int64  \n",
+      " 25  Month_7_Support_Calls   10000 non-null  int64  \n",
+      " 26  Month_8_Spend           10000 non-null  float64\n",
+      " 27  Month_8_Items           10000 non-null  int64  \n",
+      " 28  Month_8_Support_Calls   10000 non-null  int64  \n",
+      " 29  Month_9_Spend           10000 non-null  float64\n",
+      " 30  Month_9_Items           10000 non-null  int64  \n",
+      " 31  Month_9_Support_Calls   10000 non-null  int64  \n",
+      " 32  Month_10_Spend          10000 non-null  float64\n",
+      " 33  Month_10_Items          10000 non-null  int64  \n",
+      " 34  Month_10_Support_Calls  10000 non-null  int64  \n",
+      " 35  Month_11_Spend          10000 non-null  float64\n",
+      " 36  Month_11_Items          10000 non-null  int64  \n",
+      " 37  Month_11_Support_Calls  10000 non-null  int64  \n",
+      " 38  Month_12_Spend          10000 non-null  float64\n",
+      " 39  Month_12_Items          10000 non-null  int64  \n",
+      " 40  Month_12_Support_Calls  10000 non-null  int64  \n",
+      " 41  Churn                   10000 non-null  int64  \n",
+      "dtypes: float64(12), int64(28), object(2)\n",
+      "memory usage: 3.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                0\n",
+       "CustomerID                0\n",
+       "Age                       0\n",
+       "Location                  0\n",
+       "Device                    0\n",
+       "Month_1_Spend             0\n",
+       "Month_1_Items             0\n",
+       "Month_1_Support_Calls     0\n",
+       "Month_2_Spend             0\n",
+       "Month_2_Items             0\n",
+       "Month_2_Support_Calls     0\n",
+       "Month_3_Spend             0\n",
+       "Month_3_Items             0\n",
+       "Month_3_Support_Calls     0\n",
+       "Month_4_Spend             0\n",
+       "Month_4_Items             0\n",
+       "Month_4_Support_Calls     0\n",
+       "Month_5_Spend             0\n",
+       "Month_5_Items             0\n",
+       "Month_5_Support_Calls     0\n",
+       "Month_6_Spend             0\n",
+       "Month_6_Items             0\n",
+       "Month_6_Support_Calls     0\n",
+       "Month_7_Spend             0\n",
+       "Month_7_Items             0\n",
+       "Month_7_Support_Calls     0\n",
+       "Month_8_Spend             0\n",
+       "Month_8_Items             0\n",
+       "Month_8_Support_Calls     0\n",
+       "Month_9_Spend             0\n",
+       "Month_9_Items             0\n",
+       "Month_9_Support_Calls     0\n",
+       "Month_10_Spend            0\n",
+       "Month_10_Items            0\n",
+       "Month_10_Support_Calls    0\n",
+       "Month_11_Spend            0\n",
+       "Month_11_Items            0\n",
+       "Month_11_Support_Calls    0\n",
+       "Month_12_Spend            0\n",
+       "Month_12_Items            0\n",
+       "Month_12_Support_Calls    0\n",
+       "Churn                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([756.00576085, 594.83815725, 453.21740511, ..., 533.28921747,\n",
+       "       684.74613679, 509.06293451])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Month_1_Spend'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop unnecessary columns\n",
+    "columns_to_drop = ['Unnamed: 0', 'CustomerID']\n",
+    "df_cleaned = df_cleaned.drop(columns=columns_to_drop)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for missing values\n",
+    "missing_values = df.isnull().sum()\n",
+    "\n",
+    "# Drop rows with any missing values\n",
+    "df_cleaned = df.dropna()\n",
+    "\n",
+    "# Alternatively, you can fill missing values with a specific value\n",
+    "# df_filled = df.fillna(value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert 'Location' and 'Device' to categorical data type\n",
+    "df_cleaned['Location'] = df_cleaned['Location'].astype('category')\n",
+    "df_cleaned['Device'] = df_cleaned['Device'].astype('category')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform one-hot encoding on categorical variables\n",
+    "df_encoded = pd.get_dummies(df_cleaned, columns=['Location', 'Device'], drop_first=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Create a StandardScaler object\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Scale the numerical features\n",
+    "numerical_columns = ['Age', 'Month_1_Spend', ..., 'Month_12_Support_Calls']\n",
+    "df_encoded[numerical_columns] = scaler.fit_transform(df_encoded[numerical_columns])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming 'Churn' is the target variable\n",
+    "X = df_encoded.drop(columns=['Churn'])\n",
+    "y = df_encoded['Churn']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming df is your DataFrame\n",
+    "num_columns = df.columns[df.dtypes == 'float64']  # Select numerical columns\n",
+    "num_bins = 5  # Number of bins\n",
+    "\n",
+    "# Create new categorical columns by categorizing the numerical columns\n",
+    "for col in num_columns:\n",
+    "    bin_labels = [f\"{col}_bin_{i}\" for i in range(1, num_bins + 1)]\n",
+    "    df[f\"{col}_category\"] = pd.cut(df[col], bins=num_bins, labels=bin_labels)\n",
+    "\n",
+    "# Print the DataFrame to see the added categorical columns\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Create a KNN classifier\n",
+    "knn_classifier = KNeighborsClassifier(n_neighbors=5)\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "knn_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "knn_predictions = knn_classifier.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "knn_accuracy = accuracy_score(y_test, knn_predictions)\n",
+    "print(\"KNN Accuracy:\", knn_accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Create a Logistic Regression model\n",
+    "logreg_model = LogisticRegression()\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "logreg_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "logreg_predictions = logreg_model.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "logreg_accuracy = accuracy_score(y_test, logreg_predictions)\n",
+    "print(\"Logistic Regression Accuracy:\", logreg_accuracy)\n"
    ]
   },
   {
