--- a/final_exam.ipynb
+++ b/final_exam.ipynb
@@ -744,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(['Unnamed'], axis=0, inplace=True)"
+    "df2= df.drop(['Unnamed'], axis=0, inplace=True)"
    ]
   },
   {
@@ -753,7 +753,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dup = Vaccine[Vaccine.duplicated()]\n",
+    "df2.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dup = df2[df2.duplicated()]\n",
     "dup"
    ]
   },
@@ -763,7 +781,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna()"
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.drop(['description', 'steps', 'submitted'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(1,3, figsize=(15,5))\n",
+    "sns.histplot(df2['Age'], ax=ax1)\n",
+    "sns.histplot(df2['Work_Experience'], ax=ax2)\n",
+    "sns.histplot(df2['Family_Size'], ax=ax3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_columns = ['minutes', 'n_steps', 'n_ingredients', 'Calories', 'Total_fat', 'Sugar', 'Sodium', 'Protein', 'Saturated_fat', 'Carbs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the histogram fo reach numerical columns so we can better make decisions on dropping outliers\n",
+    "\n",
+    "# Set the number of bins for the histogram\n",
+    "num_bins = 20\n",
+    "\n",
+    "# Plot histograms for each numerical column and see their skewness and tailness visually, added alpha feature here as not adding this feature will help the graphs display distribution precisely.\n",
+    "for column in numerical_columns:\n",
+    "    plt.figure(figsize=(8, 6))  # Adjust the figure size as per your preference\n",
+    "    plt.hist(df2[column], bins=num_bins, edgecolor='black', alpha=0.7)  # Added transparency\n",
+    "    plt.title(f'Histogram of {column}')\n",
+    "    plt.xlabel(column)\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "descriptive_stats = df2.describe()\n",
+    "print(descriptive_stats)"
    ]
   },
   {
@@ -791,7 +870,7 @@
     }
    ],
    "source": [
-    "df['visitor_location'].unique()"
+    "df2['visitor_location'].unique()"
    ]
   },
   {
@@ -801,7 +880,7 @@
    "outputs": [],
    "source": [
     "location_mapping = {1:'North America', 2:'South America', 3:'Australia', 4:'Asia', 5:'Europe'}\n",
-    "df['visitor_location'] = df['visitor_location'].map(location_mapping)"
+    "df2['visitor_location'] = df2['visitor_location'].map(location_mapping)"
    ]
   },
   {
@@ -822,7 +901,7 @@
     }
    ],
    "source": [
-    "df['marketing_channel'].unique()"
+    "df2['marketing_channel'].unique()"
    ]
   },
   {
@@ -832,17 +911,7 @@
    "outputs": [],
    "source": [
     "channel_mapping = {1:'youtube', 2:'organic', 3:'instagram', 4:'facebook', 5:'google'}\n",
-    "df['marketing_channel'] = df['marketing_channel'].map(channel_mappin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "season_mapping = {1:'winter', 2:'spring', 3:'summer', 4:'fall'}\n",
-    "bikes['season'] = bikes['season'].map(season_mapping)"
+    "df2['marketing_channel'] = df2['marketing_channel'].map(channel_mappin)"
    ]
   },
   {
@@ -851,9 +920,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_dummies = pd.get_dummies(df['visitor_location'])\n",
-    "channel_dummies = pd.get_dummies(df['marketing_channel'])\n",
-    "gender_dummies = pd.get_dummies(df['gender'])"
+    "location_dummies = pd.get_dummies(df2['visitor_location'], dtype=int)\n",
+    "channel_dummies = pd.get_dummies(df2['marketing_channel'], dtype=int)\n",
+    "gender_dummies = pd.get_dummies(df2['gender'], dtype=int)"
    ]
   },
   {
@@ -940,9 +1009,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([df,location_dummies], axis=1)\n",
-    "df = pd.concat([df,channel_dummies], axis=1)\n",
-    "df = pd.concat([df,gender_dummies], axis=1)"
+    "df2 = pd.concat([df2,location_dummies], axis=1)\n",
+    "df2 = pd.concat([df2,channel_dummies], axis=1)\n",
+    "df2 = pd.concat([df2,gender_dummies], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.drop(['visitor_location', 'marketing_channel', 'gender'], axis=1, inplace=True)"
    ]
   },
   {
@@ -1158,17 +1236,7 @@
     }
    ],
    "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
+    "df2.head()"
    ]
   }
  ],
