--- a/class1_exercise.ipynb
+++ b/class1_exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,19 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "bagging = BaggingClassifier(KNeighborsClassifier(),\n",
     "                         max_samples=0.5, max_features=0.5)\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,59 +31,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "X = [[0, 0], [1, 1]]\n",
-    "Y = [0, 1]\n",
-    "clf = RandomForestClassifier(n_estimators=10)\n",
-    "clf = clf.fit(X, Y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pipeline: Integrate preprocessing into the training process\n",
+    "pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('clf', DecisionTreeClassifier())\n",
+    "])\n",
+    "\n",
+    "# Number of bootstrap samples and trees in the ensemble\n",
+    "n_samples = len(X_train)\n",
+    "n_trees = 50\n",
+    "\n",
+    "def bootstrap_sample(X, y):\n",
+    "    indices = np.random.choice(len(X), size=len(X), replace=True)\n",
+    "    return X[indices], y[indices]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train multiple decision trees on different bootstrap samples\n",
+    "trees = []\n",
+    "for _ in range(n_trees):\n",
+    "    X_sample, y_sample = bootstrap_sample(X_train, y_train)\n",
+    "    \n",
+    "    # Clone the pipeline for each tree\n",
+    "    cloned_pipeline = Pipeline(steps=[('scaler', StandardScaler()), ('clf', DecisionTreeClassifier())])\n",
+    "    cloned_pipeline.fit(X_sample, y_sample)\n",
+    "    trees.append(cloned_pipeline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())]),\n",
+       " Pipeline(steps=[('scaler', StandardScaler()),\n",
+       "                 ('clf', DecisionTreeClassifier())])]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.datasets import make_blobs\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "X, y = make_blobs(n_samples=10000, n_features=10, centers=100,\n",
-    "     random_state=0)\n",
-    "\n",
-    "clf = DecisionTreeClassifier(max_depth=None, min_samples_split=2,\n",
-    "     random_state=0)\n",
-    "scores = cross_val_score(clf, X, y, cv=5)\n",
-    "scores.mean()\n",
-    "\n",
-    "\n",
-    "clf = RandomForestClassifier(n_estimators=10, max_depth=None,\n",
-    "     min_samples_split=2, random_state=0)\n",
-    "scores = cross_val_score(clf, X, y, cv=5)\n",
-    "scores.mean()\n",
-    "\n",
-    "\n",
-    "clf = ExtraTreesClassifier(n_estimators=10, max_depth=None,\n",
-    "    min_samples_split=2, random_state=0)\n",
-    "scores = cross_val_score(clf, X, y, cv=5)\n",
-    "scores.mean() > 0.999\n"
+    "trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aggregate predictions\n",
+    "predictions = np.zeros((len(X_test), n_trees))\n",
+    "for tree_index, tree in enumerate(trees):\n",
+    "    predictions[:, tree_index] = tree.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [2., 2., 2., ..., 2., 2., 2.],\n",
+       "       ...,\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
    ]
   },
   {
