--- a/Fall 2023/class2_exercise.ipynb
+++ b/Fall 2023/class2_exercise.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: xgboost in /opt/anaconda3/lib/python3.9/site-packages (2.0.0)\n",
-      "Requirement already satisfied: numpy in /opt/anaconda3/lib/python3.9/site-packages (from xgboost) (1.21.5)\n",
       "Requirement already satisfied: scipy in /opt/anaconda3/lib/python3.9/site-packages (from xgboost) (1.7.3)\n",
+      "Requirement already satisfied: numpy in /opt/anaconda3/lib/python3.9/site-packages (from xgboost) (1.21.5)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -46,8 +46,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: lightgbm in /opt/anaconda3/lib/python3.9/site-packages (4.1.0)\n",
-      "Requirement already satisfied: numpy in /opt/anaconda3/lib/python3.9/site-packages (from lightgbm) (1.21.5)\n",
       "Requirement already satisfied: scipy in /opt/anaconda3/lib/python3.9/site-packages (from lightgbm) (1.7.3)\n",
+      "Requirement already satisfied: numpy in /opt/anaconda3/lib/python3.9/site-packages (from lightgbm) (1.21.5)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,11 +706,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Convert data to DMatrix format for XGBoost\n",
     "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
     "dvalid = xgb.DMatrix(X_valid, label=y_valid)"
@@ -2011,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2021,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2034,20 +2042,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "bst = lgb.train(params, train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the model\n",
-    "bst = lgb.train(params, train_data)\n",
-    "\n",
     "# Predict on the validation set\n",
     "y_pred = bst.predict(X_valid, num_iteration=bst.best_iteration)\n",
     "\n",
     "# Calculate RMSE (Root Mean Squared Error)\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rmse = np.sqrt(mean_squared_error(y_valid, y_pred))\n",
     "print(f\"RMSE on validation set: {rmse:.2f}\")"
    ]
