--- a/Fall 2023/class2_exercise.ipynb
+++ b/Fall 2023/class2_exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1797,7 @@
        "dict_keys(['eval', 'train'])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
        "[1000 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,16 +1955,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bst.best_ntree_limit = 67"
+    "bst.best_ntree_limit = 997"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1983,7 @@
        "       1.55542410e-04, 1.00984114e-04, 1.69268154e-04], dtype=float32)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2019,40 +2019,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = lgb.Dataset(X_train, label=y_train)\n",
-    "valid_data = lgb.Dataset(X_valid, label=y_valid, reference=train_data)"
+    "import lightgbm as lgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\n",
-    "    'objective': 'regression',\n",
-    "    'metric': 'rmse',\n",
-    "    'verbosity': -1\n",
-    "}\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "import lightgbm as lgb\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y1 = df['Class']\n",
+    "X1 = df.drop('Class', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
-     ]
-    },
     {
      "ename": "",
      "evalue": "",
@@ -2063,22 +2062,32 @@
     }
    ],
    "source": [
+    "# Split data into training and validation sets\n",
+    "X1_train, X1_valid, y1_train, y1_valid = train_test_split(X1, y1, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define the datasets for LightGBM\n",
+    "train_data = lgb.Dataset(X1_train, label=y1_train)\n",
+    "valid_data = lgb.Dataset(X1_valid, label=y1_valid, reference=train_data)\n",
+    "\n",
+    "# Define the parameters\n",
+    "params = {\n",
+    "    'objective': 'regression',\n",
+    "    'metric': 'rmse',\n",
+    "    'verbosity': -1\n",
+    "}\n",
+    "\n",
     "# Train the model\n",
-    "bst = lgb.train(params, train_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bst = lgb.train(params, train_data)\n",
+    "\n",
     "# Predict on the validation set\n",
-    "y_pred = bst.predict(X_valid, num_iteration=bst.best_iteration)\n",
+    "y1_pred = bst.predict(X1_valid, num_iteration=bst.best_iteration)\n",
     "\n",
     "# Calculate RMSE (Root Mean Squared Error)\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "rmse = np.sqrt(mean_squared_error(y_valid, y_pred))\n",
+    "print(f\"RMSE on validation set: {rmse:.2f}\")"
    ]
   },
   {
@@ -2087,8 +2096,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rmse = np.sqrt(mean_squared_error(y_valid, y_pred))\n",
-    "print(f\"RMSE on validation set: {rmse:.2f}\")"
+    "params = {\n",
+    "    'objective': 'regression',\n",
+    "    'metric': 'rmse',\n",
+    "    'verbosity': -1\n",
+    "}\n"
    ]
   },
   {
@@ -2110,24 +2122,40 @@
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
+    "from sklearn.metrics import classification_report\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -U imbalanced-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create an imbalanced dataset\n",
-    "X, y = make_classification(n_samples=1000, n_features=20, n_informative=2, n_redundant=10,\n",
+    "X1, y1 = make_classification(n_samples=1000, n_features=20, n_informative=2, n_redundant=10,\n",
     "                           n_clusters_per_class=1, weights=[0.99], flip_y=0, random_state=42)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, test_size=0.25, random_state=42)\n",
     "\n",
     "# Apply SMOTE to the training data\n",
     "smote = SMOTE()\n",
-    "X_resampled, y_resampled = smote.fit_resample(X_train, y_train)\n",
+    "X1_resampled, y1_resampled = smote.fit_resample(X1_train, y1_train)\n",
     "\n",
     "# Train and evaluate a model\n",
     "clf = RandomForestClassifier()\n",
-    "clf.fit(X_resampled, y_resampled)\n",
-    "y_pred = clf.predict(X_test)\n",
+    "clf.fit(X1_resampled, y1_resampled)\n",
+    "y1_pred = clf.predict(X1_test)\n",
     "\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y1_test, y1_pred))"
    ]
   },
   {
@@ -2138,7 +2166,7 @@
    "source": [
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "rus = RandomUnderSampler()\n",
-    "X_resampled, y_resampled = rus.fit_resample(X, y)"
+    "X_resampled, y_resampled = rus.fit_resample(X, y)\n"
    ]
   }
  ],
