--- a/Fall 2023/assignment2.ipynb
+++ b/Fall 2023/assignment2.ipynb
@@ -1085,6 +1085,206 @@
     "plt.title('Box Plot of Data with Outliers')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_data = df.groupby('TENURE')\n",
+    "average_curves = grouped_data.agg('mean')\n",
+    "average_curves.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_curves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_curves['12'].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_curves_norm = average_curves/average_curves.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_curves_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = avg_curves_norm.copy()\n",
+    "X = np.array(X.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del silhouette_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Elbow Method\n",
+    "inertia = []\n",
+    "for i in range(1, 11):\n",
+    "    kmeans = KMeans(n_clusters=i, random_state=0)\n",
+    "    kmeans.fit(X)\n",
+    "    inertia.append(kmeans.inertia_)\n",
+    "\n",
+    "plt.plot(range(1, 11), inertia)\n",
+    "plt.title('Elbow Method')\n",
+    "plt.xlabel('Number of clusters')\n",
+    "plt.ylabel('Inertia')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Applying K-means with 4 clusters\n",
+    "kmeans = KMeans(n_clusters=4)\n",
+    "kmeans.fit(X)\n",
+    "labels = kmeans.labels_\n",
+    "centers = kmeans.cluster_centers_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Silhouette Score\n",
+    "sil_score = silhouette_score(X, labels)\n",
+    "print(f\"Silhouette Score: {sil_score}\")\n",
+    "\n",
+    "# Plotting the clusters\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=labels)\n",
+    "plt.scatter(centers[:, 0], centers[:, 1], c='red')\n",
+    "plt.title('K-means Clustering')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing required libraries\n",
+    "from scipy.cluster.hierarchy import dendrogram, linkage\n",
+    "\n",
+    "# Generate linkage matrix\n",
+    "Z = linkage(X, method='ward')\n",
+    "\n",
+    "# Plot dendrogram\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "dendrogram(Z)\n",
+    "plt.title('Hierarchical Clustering Dendrogram')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing required library\n",
+    "from sklearn.cluster import AffinityPropagation\n",
+    "\n",
+    "# Applying Affinity Propagation\n",
+    "af = AffinityPropagation(random_state=0)\n",
+    "af_labels = af.fit_predict(X)\n",
+    "\n",
+    "# Silhouette Score\n",
+    "af_sil_score = silhouette_score(X, af_labels)\n",
+    "print(f\"Affinity Propagation Silhouette Score: {af_sil_score}\")\n",
+    "\n",
+    "# Plotting\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=af_labels)\n",
+    "plt.title('Affinity Propagation Clustering')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing required library\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "# Applying DBSCAN\n",
+    "dbscan = DBSCAN(eps=0.5, min_samples=5)\n",
+    "dbscan_labels = dbscan.fit_predict(X)\n",
+    "\n",
+    "# Silhouette Score\n",
+    "# Note: DBSCAN can result in noise data point with label -1\n",
+    "# Only include points that are part of a cluster\n",
+    "if len(set(dbscan_labels)) > 1:\n",
+    "    dbscan_sil_score = silhouette_score(X, dbscan_labels)\n",
+    "    print(f\"DBSCAN Silhouette Score: {dbscan_sil_score}\")\n",
+    "\n",
+    "# Plotting\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=dbscan_labels)\n",
+    "plt.title('DBSCAN Clustering')\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
