--- a/Fall 2023/assignment2.ipynb
+++ b/Fall 2023/assignment2.ipynb
@@ -984,6 +984,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1148650388.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    def show_boxplot(df)\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def show_boxplot(df):\n",
+    "plt.rcParams['figure.figsize'] = [14,6]\n",
+    "sns.boxplot(data = df, orient=\"v\")\n",
+    "plt.title(\"Outliers Distribution\", fontsize = 16)\n",
+    "plt.ylabel(\"Range\", fontweight = 'bold')\n",
+    "plt.xlabel(\"Attributes\", fontweight = 'bold')\n",
+    "   \n",
+    "show_boxplot(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_outliers(df):\n",
+    "   \n",
+    "df = df.copy()\n",
+    "   \n",
+    "for col in list(df.columns):\n",
+    " \n",
+    "      Q1 = df[str(col)].quantile(0.05)\n",
+    "      Q3 = df[str(col)].quantile(0.95)\n",
+    "      IQR = Q3 - Q1\n",
+    "      lower_bound = Q1 - 1.5*IQR\n",
+    "      upper_bound = Q3 + 1.5*IQR\n",
+    " \n",
+    "      df = df[(df[str(col)] >= lower_bound) & \n",
+    "\n",
+    "        (df[str(col)] <= upper_bound)]\n",
+    "   \n",
+    "return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_boxplot(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_outliers(data):\n",
+    "   \n",
+    "df = data.copy()\n",
+    "   \n",
+    "for col in list(df.columns):\n",
+    " \n",
+    "      Q1 = df[str(col)].quantile(0.05)\n",
+    "      Q3 = df[str(col)].quantile(0.95)\n",
+    "      IQR = Q3 - Q1\n",
+    "      lower_bound = Q1 - 1.5*IQR\n",
+    "      upper_bound = Q3 + 1.5*IQR\n",
+    " \n",
+    "      df = df[(df[str(col)] >= lower_bound) & \n",
+    "\n",
+    "        (df[str(col)] <= upper_bound)]\n",
+    "   \n",
+    "return df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -1087,6 +1181,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(data = df, x = 'longitude', y = 'latitude', hue = 'TEUNRE')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1129,6 +1232,29 @@
    "outputs": [],
    "source": [
     "avg_curves_norm = average_curves/average_curves.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(home_data[['latitude', 'longitude']], home_data[['median_house_value']], test_size=0.33, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "X_train_norm = preprocessing.normalize(X_train)\n",
+    "X_test_norm = preprocessing.normalize(X_test)"
    ]
   },
   {
